[package]
name = "transpo-rt"
version = "0.1.0"
authors = ["antoine-de <antoine.desbordes@gmail.com>", "Tristram Gräbener <tristramg@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "0.7"
sentry-actix = "0.13.0"
sentry = "0.13.0"
env_logger = "0.6"
futures = "0.1"
reqwest = "0.9"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
bytes = "0.4"
prost = "0.4"
prost-derive = "0.4"
serde = "1.0"
serde_derive = "1"
structopt = "0.2"
transit_model = "^0.4.1"
chrono-tz = "0.5"
serde_yaml = "0.8"
time-parse = "0.1"

[dev-dependencies]
serde_json = "1.0"
mockito = "0.15"
transit_model_builder = "0.1.0"
maplit = "1.0"

[build-dependencies]
prost-build = "0.4"

