[package]
name = "transpo-rt"
version = "0.1.0"
authors = ["antoine-de <antoine.desbordes@gmail.com>", "Tristram Gräbener <tristramg@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "3"
actix-rt = "*"
# TODO: plug it back
#sentry-actix = "0.13.0"
#sentry = "0.13.0"
futures = "*"
reqwest = "0.9"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
bytes = "0.4"
prost = "0.4"
prost-derive = "0.4"
serde = "1.0"
serde_derive = "1"
structopt = "0.3"
transit_model = "^0.4.1"
chrono-tz = "0.5"
serde_yaml = "0.8"
time-parse = "0.1"
openapi-schema = { git = "https://github.com/antoine-de/openapi-schema.git", rev = "7e7c373e8b9f96dd81c7aaae0d2d307d1e82ff40" }
openapi = { git = "https://github.com/antoine-de/openapi", rev = "11f732b373d2dc1d725f77a245fac3677b51318b" }
maplit = "1.0"
slog = "2"
slog-term = "2"
slog-envlogger = "2"
slog-async = "2"
slog-scope = "4"
slog-stdlog = "4"
rustic_hal = "0.2"
url = "1.7"

[dev-dependencies]
serde_json = "1.0"
mockito = "0.15"
transit_model_builder = "0.1.0"

[build-dependencies]
prost-build = "0.4"

