[package]
name = "transpo-rt"
version = "0.1.0"
authors = ["antoine-de <antoine.desbordes@gmail.com>", "Tristram Gräbener <tristramg@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-web = "3"
actix-cors = "0.5"
actix-rt = "1"
sentry = { version = "0.20", features = ["anyhow"] }
futures = "0.3"
reqwest = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
bytes = "0.5"
prost = "0.6"
prost-derive = "0.6"
serde = "1.0"
serde_derive = "1"
structopt = "0.3"
transit_model = "=0.4.1"
chrono-tz = "0.5"
serde_yaml = "0.8"
time-parse = "0.1"
openapi-schema = { git = "https://github.com/antoine-de/openapi-schema.git", rev = "7e7c373e8b9f96dd81c7aaae0d2d307d1e82ff40" }
openapi = { git = "https://github.com/antoine-de/openapi", rev = "11f732b373d2dc1d725f77a245fac3677b51318b" }
maplit = "1.0"
slog = "2"
slog-term = "2"
slog-envlogger = "2"
slog-async = "2"
slog-scope = "4"
slog-stdlog = "4"
rustic_hal = "0.2"
url = "2"
slog-scope-futures = "0.1"

[dev-dependencies]
serde_json = "1.0"
mockito = "0.15"
transit_model_builder = "0.1.0"

[build-dependencies]
prost-build = "0.4"

